# Beacon

./: .dockerignore  .env.example  .gitignore  .mailmap  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  SECURITY.md  beacon.yaml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-approve.yml  docker.yml  lint.yml  release.yml  stale.yml  test.yml
.kiro/: beacon-dev.agent.yaml
.kiro/skills/: add-collector.md  add-runner.md  create-diagnostic-pack.md
.kiro/steering/: api-standards.md  architecture.md  product.md  testing-standards.md
docker/: Dockerfile.collector  Dockerfile.core  Dockerfile.telemetry  influxdb-init.sh
docs/: IMPLEMENTATION_SUMMARY.md  development-workflow.md  github-actions-audit.md  pre-commit-setup.md  telemetry-v2-design.md
homebrew/: beacon.rb  com.beacon.agent.plist
packs/: full_diagnostic.yaml  quick_health.yaml  wifi_deep_dive.yaml
scripts/: agent-install.sh  beacon-telemetry.plist  beacon-telemetry.service  dev_setup.sh
src/beacon/: __init__.py  __main__.py  config.py
tests/: conftest.py
tests/integration/: test_api.py  test_influx_storage.py  test_pack_execution.py
tests/unit/: test_api_deps.py  test_api_routes_evidence.py  test_api_routes_health.py  test_api_routes_metrics.py  test_api_routes_packs.py  test_bxi.py  test_cli_evidence.py  test_cli_metrics.py  (+31 more)
ui/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+130 files in other folders)
