[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beacon"
version = "0.1.0"
description = "Docker-first network diagnostics platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "influxdb-client[async]>=1.40.0",
    "psutil>=6.0.0",
    "dnspython>=2.7.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
throughput = ["iperf3>=0.1.11"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-cov", "ruff", "mypy"]

[project.scripts]
beacon = "beacon.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/beacon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
